deploy/kubernetes/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-artifact-extractor
  labels:
    name: cloud-artifact-extractor
    app: cloud-artifact-extractor
